# calliope

./: .gitignore  .gitmodules  AUTHORS  DESIGN  README  README.md  TODO  USE-CASES  ideas  meson-python-packages-check  meson.build  meson_options.txt  pylintrc  requires.txt  wscript
.circleci/: config.yml
apps/viewer/: app.py  calliope-viewer.gresource.xml  main.py.in  mainwindow.py  mainwindow.ui  meson.build  playlistbox.py  playlistitem.ui  playlistmodel.py
calliope/: __init__.py  __init__.py.in  __main__.py  cache.py  cli.py  cmd_diff.py  cmd_export.py  cmd_import.py  cmd_lastfm.py  cmd_musicbrainz.py  cmd_play.py  cmd_shuffle.py  cmd_spotify.py  cmd_stat.py  cmd_suggest.py  cmd_sync.py  cmd_tracker.py  cmd_web.py  config.py  export.py  import.py  lastfm.py  main.py.in  meson.build  modules.json.in  play.py  playlist.py  spotify.py  stat.py  sync.py  tracker.py  www.py
calliope/data/web/templates/: meson.build  playlist.html.in
calliope/diff/: __init__.py  meson.build
calliope/export/: __init__.py  meson.build
calliope/import_/: __init__.py  meson.build
calliope/lastfm/: __init__.py  history.py  lastexport.py  meson.build
calliope/lastfm/migrations/: 0001.init.py
calliope/miners/: __init__.py
calliope/miners/lastfm/: __init__.py  lastexport.py
calliope/miners/lastfm/migrations/: 0001.init.py
calliope/musicbrainz/: __init__.py  meson.build
calliope/play/: __init__.py  meson.build
calliope/shuffle/: __init__.py  meson.build
calliope/spotify/: __init__.py  meson.build
calliope/stat/: __init__.py  meson.build
calliope/store/: __init__.py
calliope/store/migrations/: 0001.init.py
calliope/suggest/: __init__.py  meson.build
calliope/sync/: __init__.py  meson.build
calliope/tracker/: __init__.py  meson.build
calliope/views/: bucket.py
calliope/web/: __init__.py  meson.build
data/: calliope.egg-info.in  meson.build
docker/testsuite-fedora/: Dockerfile  cleanup.sh  prepare.sh
docs/: Makefile  conf.py  copy-onto-portable-device.mdwn  doc_requirements.txt  follow-top-artists-on-twitter.mdwn  format.rst  index.rst  meson.build  reference.rst  schema.mdwn  top-artists.mdwn  use-cases.rst
docs/use-cases/: copy-onto-portable-device.rst  create-mix.mdwn  create-mix.rst  follow-top-artists-on-twitter.rst  listen-history.rst  never-listened.mdwn  never-listened.rst  selecting-from-a-collection.rst  top-artists.mdwn  top-artists.rst  what-to-buy.mdwn  what-to-buy.rst
scripts/: cpe-enter  run_from_source_tree  tagcloud.py
tests/: conftest.py  meson.build  test_cache.py  test_cli.py  test_core.py  test_export.py  test_import.py  test_import_pls.py  test_import_xspf_jspf.py  test_tracker.py  testutils.py
